CSS: fix media being cropped inside the opened modal

--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -146,13 +146,13 @@
         }
 
         &-item {
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
             display: block;
-            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: auto;
+            height: auto;
+            max-width: 100%;
 
             @include layout-1024() {
                 border-radius: to-rem($F7);
